# release-manager

./: package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: lib.rs
src-tauri/crates/git-ops/: Cargo.toml
src-tauri/crates/git-ops/src/: lib.rs
src-tauri/crates/gitlab/: Cargo.toml
src-tauri/crates/gitlab/src/: lib.rs
src-tauri/crates/jira/: Cargo.toml
src-tauri/crates/jira/src/: lib.rs
src-tauri/crates/release-engine/: Cargo.toml
src-tauri/crates/release-engine/src/: changelog.rs  lib.rs
src-tauri/crates/storage/: Cargo.toml
src-tauri/crates/storage/migrations/: 0001_init.sql
src-tauri/crates/storage/src/: branch_tags.rs  db.rs  groups.rs  lib.rs  repos.rs  secret.rs  settings.rs
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/commands/: branch_tags.rs  changelog.rs  gitlab.rs  groups.rs  health.rs  merges.rs  mod.rs  releases.rs  repos.rs  settings.rs  watch.rs
src/components/: Activity.tsx  AppShell.tsx  ThemeToggle.tsx  TitleBar.tsx
src/components/ui/: dropdown-menu.tsx
src/features/changelog/: ChangelogPage.tsx
src/features/releases/: ReleasesPage.tsx  ReleasesPlaceholder.tsx
src/features/settings/: ConnectionsTab.tsx  DiscoverFromGitLabDialog.tsx  GroupsTab.tsx  SettingsPage.tsx
src/lib/: api.ts  repo-events.ts  task-events.ts  tasks.ts  types.ts
