[package]
name = "rm-git-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rm-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
