[package]
name = "rm-gitlab"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
